correction mobile projet

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -139,6 +139,7 @@
 
     .projets__card{
         width: 90%;
+        margin: 10% 2% 2% 2%;
         
     }
 
